syntax = "proto3";

package healthcare;

service DoctorService {
  rpc CreateDoctor(Doctor) returns (Doctor);
  rpc GetDoctorById(GetReqStrDoctor) returns (Doctor);
  rpc GetAllDoctors(GetAllDoctorS) returns (ListDoctors);
  rpc UpdateDoctor(Doctor) returns (Doctor);
  rpc DeleteDoctor(GetReqStrDoctor) returns (StatusDoctor);
  rpc ListDoctorsByDepartmentId(GetReqStrDep) returns (ListDoctors);
}

message GetReqStrDoctor{
  string id = 1;
  bool is_active = 2;
  bool is_hard_deleted = 3;
}

message GetReqStrDep {
  string department_id = 1;
  bool is_active = 2;
  int32 page = 3;
  int32 limit = 4;
  string field = 5;
  string value = 6;
  string order_by = 7;
  int32 count = 8;
}

message StatusDoctor {
  bool status = 1;
}

message GetAllDoctorS {
  int64 page = 1;
  int64 limit = 2;
  string search = 3;
}

message ListDoctors {
  int64 count = 1;
  repeated Doctor doctors = 2;
}

message Doctor {
  string id = 1;
  int32 order = 2;
  string first_name = 3;
  string last_name = 4;
  string gender = 5;
  string birth_date = 6;
  string phone_number = 7;
  string email = 8;
  string password = 9;
  string address = 10;
  string city = 11;
  string country = 12;
  float salary = 13;
  string bio = 14;
  string start_work_date = 15;
  string end_work_date = 16;
  int32 work_years = 17;
  string department_id = 18;
  int32 room_number = 19;
  string created_at = 20;
  string updated_at = 21;
  string deleted_at = 22;
}
